# ros2_cpp_course

./: .gitignore
2024a_a2_skeleton/: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  logger.h  main.cpp  main_test.cpp  mission.cpp  mission.h  missioninterface.h  quadcopter.cpp  quadcopter.h
2024a_a2_skeleton/data/: QUADCOPTER.TXT  QUADCOPTER_SUPER.TXT
2024a_a2_skeleton/test/: CMakeLists.txt  test_helper.h  test_mission_reach_goals.cpp  tsp_reach_goals_ack.cpp  tsp_reach_goals_quad.cpp
assignment_1/: CMakeLists.txt  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  index.dox  mission.cpp  mission.h  missioninterface.h  skidsteer.cpp  skidsteer.h
assignment_2/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  logger.cpp  main.cpp  mission.h  quadcopter.cpp
assignment_2/data/: ACKERMAN.TXT
assignment_2/test/: test_audi_reach_goals.cpp  test_quad_reach_goals.cpp  tsp_reach_goals_ack.cpp  tsp_reach_goals_quad.cpp
drone_code/: CMakeLists.txt  README.md  ackerman.cpp  ackerman.h  controller.cpp  controller.h  main.cpp  quadcopter.cpp  quadcopter.h
drone_code/test/: CMakeLists.txt  utest.cpp
resources/: 41012-Assigment-2.drawio
tutorials/week00/: README.md
tutorials/week00/starter/: CMakeLists.txt  converter.cpp  hello.cpp
tutorials/week01/: PREWORK.md  README.md  TUTORIAL.md
tutorials/week01/examples/: CMakeLists.txt  aircon.cpp  enum_example.cpp  functions.cpp  pointers.cpp  sensor.h  structs.cpp
tutorials/week01/starter/: CMakeLists.txt  aircon.cpp  arrays.cpp  enum_example.cpp  functions.cpp  pointers.cpp  structs.cpp
tutorials/week02/: README.md  TUTORIAL.md
tutorials/week02/examples/aircon/: CMakeLists.txt  aircon.cpp  aircon.h
tutorials/week02/examples/circles/: CMakeLists.txt  circle.cpp  circle.h  circle_main.cpp
tutorials/week02/starter/aircon/: CMakeLists.txt  aircon.cpp  aircon.h  main.cpp
tutorials/week02/starter/circles/: CMakeLists.txt  circle.cpp  circle.h  circle_main.cpp
tutorials/week03/: README.md  TUTORIAL.md
tutorials/week03/examples/ex01-2/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
tutorials/week03/examples/ex03-4/: CMakeLists.txt  README.md  circle.cpp  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
tutorials/week03/starter/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.h  shape.cpp  shape.h
tutorials/week04/: ADVANCED.md  README.md  TUTORIAL.md
tutorials/week04/advanced/shapes/: main.cpp  shape.h  triangle.cpp
tutorials/week04/advanced/shapes/test/: utest.cpp
tutorials/week04/examples/shape/: CMakeLists.txt  main-ex01.cpp  main-ex02.cpp  shape.cpp  shape.h  shapeprocessing.cpp  shapeprocessing.h  triangle.cpp
tutorials/week04/examples/shape/test/: CMakeLists.txt  utest.cpp
tutorials/week04/starter/basic_control/: CMakeLists.txt  control_ackerman.cpp
tutorials/week04/starter/shapes/: CMakeLists.txt  main.cpp  rectangle.h  shape.h  shapeprocessing.cpp  shapeprocessing.h  triangle.h
tutorials/week04/starter/shapes/test/: utest.cpp
tutorials/week05/: README.md  TUTORIAL.md
tutorials/week05/starter/graph_search/: graph_search.cpp
tutorials/week06/: PREWORK.md  README.md  TUTORIAL.md
tutorials/week06/examples/class_threading/: analysis.cpp  analysis.h  main.cpp
tutorials/week06/examples/databuffer_threading/: databuffer.cpp  databuffer.h  main.cpp
tutorials/week06/examples/teleop/: CMakeLists.txt  ackerman.cpp
tutorials/week06/starter/class_threading/: CMakeLists.txt  analysis.cpp
tutorials/week06/starter/databuffer_threading/: CMakeLists.txt  databuffer.cpp  main.cpp
tutorials/week06/starter/simple_threading/: CMakeLists.txt  main.cpp
tutorials/week06/starter/teleop/: CMakeLists.txt  ackerman.cpp  ackerman.h  main.cpp
tutorials/week07/: README.md  TSP.md  TUTORIAL.md
tutorials/week07/examples/ex01/: CMakeLists.txt
tutorials/week07/examples/ex02/: analysis.cpp  data.h  main.cpp  sensor.cpp
tutorials/week07/examples/ex03/: radar.cpp  radar.h
tutorials/week07/examples/tsp_search/: graph_search.cpp
tutorials/week07/starter/ex01/: main.cpp
tutorials/week07/starter/ex02/: CMakeLists.txt  analysis.cpp  analysis.h  laser.h  sensor.cpp  sensor.h
tutorials/week07/starter/ex03/: CMakeLists.txt  dataprocessing.cpp  dataprocessing.h  main.cpp  radar.cpp
tutorials/week07/starter/tsp_search/: graph_search.cpp
tutorials/week08/: LASER.md  README.md  TUTORIAL.md
tutorials/week08/examples/ex01/: main.cpp
tutorials/week08/examples/ex01/dep/include/: ackerman.h  controller.h  skidsteer.h
tutorials/week08/examples/ex01/test/: CMakeLists.txt  test_audi.cpp  test_audi_reach_goals.cpp  test_constructors.cpp  test_controller_interface.cpp
tutorials/week08/examples/laser/: main.cpp
tutorials/week08/starter/ex01/: CMakeLists.txt
tutorials/week08/starter/ex01/dep/: CMakeLists.txt
tutorials/week08/starter/ex01/dep/include/: mission.h
tutorials/week08/starter/ex01/test/: CMakeLists.txt  test_audi.cpp  test_constructors.cpp
tutorials/week08/starter/laser/: CMakeLists.txt  laser.cpp  laser.h  main.cpp
tutorials/week09/: README.md  TUTORIAL.md
